[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MobSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Ground" parent="." instance=ExtResource( 5 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 19, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
projection = 1
size = 19.0

[node name="Mobs" parent="." instance=ExtResource( 3 )]

[node name="UserInterface" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="spawn_mob" from="Mobs" to="." method="_on_Mobs_spawn_mob"]
